Completed squares app

--- a/Class 07/exercise 0/index.html
+++ b/Class 07/exercise 0/index.html
@@ -13,11 +13,20 @@
 </head>
 
 <body>
-  <h1>Squares function</h1>
-  <input id="maxNum"></input>
-  <button id="goButton">Go</button>
-  <button>Clear</button>
-  <div id="displayText"></div>
+  <h1>Square exercise</h1>
+
+  <main>
+    <h2 id="pageHeading">Squares function</h2>
+    <input id="maxNumInput" value="1" type="number" min=""/>
+    <button id="clearButton">Clear</button>
+    <div id="displayText"></div>
+  </main>
+  
+  <aside id="settingsSection">
+    <label>Choose a color: </label>
+    <input id="bgColorInput" type="color"/>
+  </aside>
+
 </body>
 
 </html>
