lightness color for text

--- a/Class 07/exercise 0/index.html
+++ b/Class 07/exercise 0/index.html
@@ -7,6 +7,8 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="style.css">
+
+  <script src="lib.js"></script>
   
   <script src="main.js" defer></script>
 
