--- a/Class 07/exercise 0/index.html
+++ b/Class 07/exercise 0/index.html
@@ -8,9 +8,12 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <!-- Auxliary library code -->
   <script src="lib.js"></script>
   
+  <!-- Main or initial code of the app -->
   <script src="main.js" defer></script>
+  <!-- if we don't add "defer" to the script link the code will compile (run) defore the whole HTML page is loaded, and elements (with an ID) will not exist ye. -->
 
 </head>
 
