--- a/Class 08/petsGallery/index.html
+++ b/Class 08/petsGallery/index.html
@@ -8,11 +8,18 @@
 
   <link rel="stylesheet" href="style.css">
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Playwrite+GB+S:ital,wght@0,100..400;1,100..400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+
   <script src="main.js" defer></script>
 </head>
 <body>
 
-  <h1>Pets Gallery</h1>
+  <header>
+    <h1>Pets Gallery</h1>
+  </header>
 
   <fieldset>
     <label>Name</label>
