--- a/Class 09/cardsApp2/index.html
+++ b/Class 09/cardsApp2/index.html
@@ -4,23 +4,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deck of Cards - WebApp</title>
+  <title>Document</title>
+
   <link rel="stylesheet" href="style.css"/>
-  <script src="deckApp.js" defer type="module"></script> 
+  <script src="main.js" defer></script>
+
 </head>
 <body>
   <header>
     <h1>Deck of Cards</h1>
     <p>Flip the cards</p>
+    <menu>
+      <button id="flipAllButton">Flip All</button>
+      <button id="showAllButton">Show All</button>
+      <button id="hideAllButton">Hide All</button>
+      <button id="shuffleButton">Shuffle</button>
+    </menu>
   </header>
-  <menu>
-    <button id="flipAllButton">Flip All</button>
-    <button id="showAllButton">Show All</button>
-    <button id="hideAllButton">Hide All</button>
-    <button id="shuffleButton">Shuffle</button>
-    <button id="flipRandom3Button">Flip Random 3</button>
-  </menu>
-  <main id="tableTopMain"></main>
+  <article id="deckArticle">
+  </article>
   <footer>
     <p>Created by Lenin Compres for IMA Front-end Web</p>
   </footer>
