--- a/Week 09/cardsApp2/index.html
+++ b/Week 09/cardsApp2/index.html
@@ -7,7 +7,7 @@
   <title>Document</title>
 
   <link rel="stylesheet" href="style.css"/>
-  <script src="main.js" defer></script>
+  <script src="main.js" type="module" defer></script>
 
 </head>
 <body>
